更新筛选与监控页面

--- a/app/templates/breakthrough.html
+++ b/app/templates/breakthrough.html
@@ -72,7 +72,7 @@
                                     <th class="number-column">杠杆</th>
                                     <th class="number-column">止盈金额</th>
                                     <th class="status-column">状态</th>
-                                    <th class="active-column">激活</th>
+                                    <th class="active-column">删除</th>
                                     <th class="date-column">同步时间</th>
                                     <th class="action-column">操作</th>
                                 </tr>
